<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestIntent</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="New_activity_main">NewActivity</string>
    <string name="nm">이름</string>
    <string name="call">전화번호</string>
    <string name="input1">-입력되지 않았습니다.</string>
    <string name="input2">-입력되지 않았습니다.</string>
	<string name="inputBtn">입력하기</string>
	
	<string name="des">이름과 전화번호를 입력하세요.</string>
    <string name="name">이름</string>
    <string name="num">전화번호</string>
	<string name="checkBtn">확인</string>
	
	
</resources>
