<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nm" />

    <TextView
        android:id="@+id/data_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call" />

    <TextView
        android:id="@+id/data_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input2" />

    <Button
         android:id="@+id/callActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputBtn" />

</LinearLayout>

